# onlineDAQ

./: .gitignore  CMakeLists.txt  setup.sh
Muon/include/Muon/: CheckEvent.cpp  EventDisplay.cpp  Geometry.cpp  HitCluster.cpp  HitFinder.cpp
sMDT/: CMakeLists.txt
sMDT/include/sMDT/: FormatTDC.h  display.h.bk  format.h  gui.h  monitor.h  sMDT.h  sMDTClient.h  sMDTServer.h  server.h
sMDT/src/: gui.cxx  monitor.cxx  output.root  sMDT.cxx  sMDTClient.cxx  sMDTServer.cxx  server.cxx
src/: client.cxx  gui.cxx  sMDT-server.cxx  server.cxx
